Fix the ASCII encoding issue with the clean script.

--- a/ai_convolutional_neural_network_fr.ipynb
+++ b/ai_convolutional_neural_network_fr.ipynb
@@ -6,7 +6,7 @@
     "collapsed": true
    },
    "source": [
-    "# R\u00e9seau de neurones convolutifs"
+    "# Réseau de neurones convolutifs"
    ]
   },
   {
@@ -15,7 +15,7 @@
     "collapsed": true
    },
    "source": [
-    "Les *r\u00e9seau de neurones convolutifs* \u00e9galement appel\u00e9s *r\u00e9seau de neurones \u00e0 convolution*, *CNN* et *ConvNet*..."
+    "Les *réseau de neurones convolutifs* également appelés *réseau de neurones à convolution*, *CNN* et *ConvNet*..."
    ]
   }
  ],
