--- a/ai_radial_basis_function_network_fr.ipynb
+++ b/ai_radial_basis_function_network_fr.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Liens int\u00e9ressants:\n",
+    "Liens intéressants:\n",
     "- http://mccormickml.com/2013/08/15/radial-basis-function-network-rbfn-tutorial/"
    ]
   }
