Fix the ASCII encoding issue with the clean script.

--- a/opendata_qualite_air_mesuree_dans_la_station_chatelet_fr.ipynb
+++ b/opendata_qualite_air_mesuree_dans_la_station_chatelet_fr.ipynb
@@ -4,28 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Qualit\u00e9 de l'air mesur\u00e9e dans la station Ch\u00e2telet"
+    "# Qualité de l'air mesurée dans la station Châtelet"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Source de donn\u00e9es utilis\u00e9e (fichiers CSV en open data): https://data.iledefrance.fr/explore/dataset/qualite-de-lair-mesuree-dans-la-station-chatelet/"
+    "Source de données utilisée (fichiers CSV en open data): https://data.iledefrance.fr/explore/dataset/qualite-de-lair-mesuree-dans-la-station-chatelet/"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TODO**: l'index du *dataframe* devrait \u00eatre constitu\u00e9 de la fusion des deux premi\u00e8res colonnes avec le bon *dtype* (un *datetime* Pandas)."
+    "**TODO**: l'index du *dataframe* devrait être constitué de la fusion des deux premières colonnes avec le bon *dtype* (un *datetime* Pandas)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## R\u00e9cup\u00e9ration des donn\u00e9es"
+    "## Récupération des données"
    ]
   },
   {
