--- a/opendata_observatoires_des_loyers_fr.ipynb
+++ b/opendata_observatoires_des_loyers_fr.ipynb
@@ -11,8 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Donn\u00e9es de l'observatoire des loyers (https://www.observatoires-des-loyers.org/):\n",
-    "- source de donn\u00e9es utilis\u00e9e (fichiers CSV en open data): https://www.data.gouv.fr/fr/datasets/resultats-nationaux-des-observatoires-locaux-des-loyers/\n",
+    "Données de l'observatoire des loyers (https://www.observatoires-des-loyers.org/):\n",
+    "- source de données utilisée (fichiers CSV en open data): https://www.data.gouv.fr/fr/datasets/resultats-nationaux-des-observatoires-locaux-des-loyers/\n",
     "- exemple d'utilisation: https://www.miximum.fr/blog/premiers-tests-avec-le-machine-learning/"
    ]
   },
@@ -22,14 +22,14 @@
    "source": [
     "## Remarque\n",
     "\n",
-    "Ce jeu de donn\u00e9es a un gros d\u00e9faut: les statistiques au niveau des communes (ou des arrondissements) sont disponible que sur https://www.observatoires-des-loyers.org/ mais ont \u00e9t\u00e9 retir\u00e9es des fichiers CSV..."
+    "Ce jeu de données a un gros défaut: les statistiques au niveau des communes (ou des arrondissements) sont disponible que sur https://www.observatoires-des-loyers.org/ mais ont été retirées des fichiers CSV..."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## R\u00e9cup\u00e9ration des donn\u00e9es"
+    "## Récupération des données"
    ]
   },
   {
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Informations utiles sur les donn\u00e9es"
+    "## Informations utiles sur les données"
    ]
   },
   {
@@ -139,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Donn\u00e9es par agglom\u00e9ration"
+    "## Données par agglomération"
    ]
   },
   {
@@ -226,14 +226,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Remarque**: pourquoi cette grosse diff\u00e9rence avec l'ann\u00e9e pr\u00e9c\u00e9dente ?"
+    "**Remarque**: pourquoi cette grosse différence avec l'année précédente ?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## R\u00e9gion Parisienne"
+    "## Région Parisienne"
    ]
   },
   {
@@ -242,7 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfp = df[df.agglomeration == \"Agglom\u00e9ration parisienne\"]"
+    "dfp = df[df.agglomeration == \"Agglomération parisienne\"]"
    ]
   },
   {
@@ -287,7 +287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## R\u00e9gion Parisienne"
+    "## Région Parisienne"
    ]
   },
   {
@@ -298,7 +298,7 @@
    },
    "outputs": [],
    "source": [
-    "dfp = df[df.agglomeration == \"Agglom\u00e9ration parisienne (hors Paris)\"]"
+    "dfp = df[df.agglomeration == \"Agglomération parisienne (hors Paris)\"]"
    ]
   },
   {
