--- a/python_format_en.ipynb
+++ b/python_format_en.ipynb
@@ -100,7 +100,7 @@
    "source": [
     "- '<' : Forces the field to be left-aligned within the available space (this is the default for most objects).\n",
     "- '>' : Forces the field to be right-aligned within the available space (this is the default for numbers).\n",
-    "- '=' : Forces the padding to be placed after the sign (if any) but before the digits. This is used for printing fields in the form \u2018+000000120\u2019. This alignment option is only valid for numeric types.\n",
+    "- '=' : Forces the padding to be placed after the sign (if any) but before the digits. This is used for printing fields in the form '+000000120'. This alignment option is only valid for numeric types.\n",
     "- '^' : Forces the field to be centered within the available space."
    ]
   },
@@ -552,8 +552,8 @@
    "metadata": {},
    "source": [
     "The available presentation types for floating point and decimal values are:\n",
-    "- 'e'  : Exponent notation. Prints the number in scientific notation using the letter \u2018e\u2019 to indicate the exponent. The default precision is 6.\n",
-    "- 'E'  : Exponent notation. Same as 'e' except it uses an upper case \u2018E\u2019 as the separator character.\n",
+    "- 'e'  : Exponent notation. Prints the number in scientific notation using the letter 'e' to indicate the exponent. The default precision is 6.\n",
+    "- 'E'  : Exponent notation. Same as 'e' except it uses an upper case 'E' as the separator character.\n",
     "- 'f'  : Fixed point. Displays the number as a fixed-point number. The default precision is 6.\n",
     "- 'F'  : Fixed point. Same as 'f'.\n",
     "- 'g'  : General format.\n",
