Fix the ASCII encoding issue with the clean script.

--- a/python_sklearn_mlp_fr.ipynb
+++ b/python_sklearn_mlp_fr.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notebooks associ\u00e9s:\n",
+    "Notebooks associés:\n",
     "- http://www.jdhp.org/docs/notebooks/ai_multilayer_perceptron_fr.html"
    ]
   },
@@ -26,17 +26,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## V\u00e9rification de la version de la biblioth\u00e8que scikit-learn"
+    "## Vérification de la version de la bibliothèque scikit-learn"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Attention**: le Perceptron Multicouche n'est impl\u00e9ment\u00e9 dans scikit-learn que depuis la version 0.18 (septembre 2016).\n",
+    "**Attention**: le Perceptron Multicouche n'est implémenté dans scikit-learn que depuis la version 0.18 (septembre 2016).\n",
     "\n",
-    "Le code source de cette impl\u00e9mentation est disponible sur [github](https://github.com/scikit-learn/scikit-learn/blob/master/sklearn/neural_network/multilayer_perceptron.py).\n",
-    "Le long fil de discussion qui pr\u00e9c\u00e9d\u00e9 l'int\u00e9gration de cette impl\u00e9mentation est disponible sur la page suivante: [issue #3204](https://github.com/scikit-learn/scikit-learn/pull/3204)."
+    "Le code source de cette implémentation est disponible sur [github](https://github.com/scikit-learn/scikit-learn/blob/master/sklearn/neural_network/multilayer_perceptron.py).\n",
+    "Le long fil de discussion qui précédé l'intégration de cette implémentation est disponible sur la page suivante: [issue #3204](https://github.com/scikit-learn/scikit-learn/pull/3204)."
    ]
   },
   {
@@ -109,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Une fois le r\u00e9seau de neurones entrain\u00e9, on peut tester de nouveaux exemples:"
+    "Une fois le réseau de neurones entrainé, on peut tester de nouveaux exemples:"
    ]
   },
   {
@@ -127,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`clf.coefs_` contient les poids du r\u00e9seau de neurones (une liste d'array):"
+    "`clf.coefs_` contient les poids du réseau de neurones (une liste d'array):"
    ]
   },
   {
@@ -175,7 +175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## R\u00e9gression"
+    "## Régression"
    ]
   },
   {
@@ -226,7 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Une fois le r\u00e9seau de neurones entrain\u00e9, on peut tester de nouveaux exemples:"
+    "Une fois le réseau de neurones entrainé, on peut tester de nouveaux exemples:"
    ]
   },
   {
@@ -244,7 +244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`clf.coefs_` contient les poids du r\u00e9seau de neurones (une liste d'array):"
+    "`clf.coefs_` contient les poids du réseau de neurones (une liste d'array):"
    ]
   },
   {
@@ -273,7 +273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## R\u00e9gularisation"
+    "## Régularisation"
    ]
   },
   {
@@ -298,7 +298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Normalisation des donn\u00e9es d'entr\u00e9e"
+    "## Normalisation des données d'entrée"
    ]
   },
   {
@@ -312,7 +312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## It\u00e9rer manuellement"
+    "## Itérer manuellement"
    ]
   },
   {
@@ -326,9 +326,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It\u00e9rer manuellement la boucle d'apprentissage peut \u00eatre pratique pour suivre son \u00e9volution ou pour l'orienter.\n",
+    "Itérer manuellement la boucle d'apprentissage peut être pratique pour suivre son évolution ou pour l'orienter.\n",
     "\n",
-    "Voici un exemple o\u00f9 on suit l'\u00e9volution des poids du r\u00e9seau sur 10 it\u00e9rations:"
+    "Voici un exemple où on suit l'évolution des poids du réseau sur 10 itérations:"
    ]
   },
   {
@@ -356,7 +356,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TODO**: Quelle diff\u00e9rence avec le mode d'apprentissage *online* (boucle ouverte ?) `fit.partial_fit()` ???"
+    "**TODO**: Quelle différence avec le mode d'apprentissage *online* (boucle ouverte ?) `fit.partial_fit()` ???"
    ]
   }
  ],
