Fix the ASCII encoding issue with the clean script.

--- a/python_sklearn_decision_trees_fr.ipynb
+++ b/python_sklearn_decision_trees_fr.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Les arbres de d\u00e9cision avec Python/Scikit-learn"
+    "## Les arbres de décision avec Python/Scikit-learn"
    ]
   },
   {
