--- a/maths_mandelbrot_set_fr.ipynb
+++ b/maths_mandelbrot_set_fr.ipynb
@@ -18,6 +18,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**TODO**\n",
+    "* dans la definition, ajouter le developpement sur une dizaine d'itérations de 2 ou 3 points comme exemple illustratif du calcul (ecrire z_i ou |z_i| ou les 2 ?)\n",
+    "* dans la definition, ajouter une representation graphique (code source caché) pour un niveau d'itération donné (ex. 50) pour avoir un exemple binaire, plus coherent avec la definition: soit un point est dans l'ensemble, soit il ne l'est pas\n",
+    "* tweet \"Faire des maths (et du Python) en s'amusant: l'ensemble de Mandelbrot\"\n",
+    "* à la fin du document, ajouter une section exploration ou on incite le lecteur a explorer en zoomant sur la representation graphique, en donnant des exemples illustrés et en rappelant la propriete autoreplicative a toute echelle des fractales (ne pas oublier d'introduire en rappelant que l'ens de Mandelbrot est une fractale...)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Définition"
    ]
   },
@@ -78,10 +89,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import axes3d\n",
-    "from matplotlib import cm\n",
-    "\n",
-    "import ipywidgets\n",
-    "from ipywidgets import interact"
+    "from matplotlib import cm"
    ]
   },
   {
