--- a/maths_montecarlo_compute_integral_fr.ipynb
+++ b/maths_montecarlo_compute_integral_fr.ipynb
@@ -28,6 +28,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "t = np.linspace(0., 2. * np.pi, 100)\n",
+    "x = np.cos(t) + np.cos(2. * t)\n",
+    "y = np.sin(t)\n",
+    "\n",
+    "N = 100\n",
+    "rand = np.array([np.random.uniform(low=-3, high=3, size=N), np.random.uniform(low=-3, high=3, size=N)]).T\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(6, 6))\n",
+    "ax.plot(rand[:,0], rand[:,1], '.k')\n",
+    "ax.plot(x, y, \"-r\", linewidth=2)\n",
+    "ax.plot([-3, -3, 3, 3, -3], [-3, 3, 3, -3, -3], \"-b\", linewidth=2)\n",
+    "ax.set_axis_off()\n",
+    "ax.set_xlim([-4, 4])\n",
+    "ax.set_ylim([-4, 4])\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
