Fix the ASCII encoding issue with the clean script.

--- a/signal_processing_fourier_transform_fr.ipynb
+++ b/signal_processing_fourier_transform_fr.ipynb
@@ -25,12 +25,12 @@
    "metadata": {},
    "source": [
     "**TODO**:\n",
-    "- ajouter notation simplifi\u00e9e\n",
+    "- ajouter notation simplifiée\n",
     "    - fourier-transform-introduction\n",
     "    - fourier-transform-slides\n",
     "    - slides de Bologne\n",
-    "- ajouter un plot interactif de f(t) (fonction 1D) pour les vecteurs (numpy) de coefs a et b donn\u00e9s\n",
-    "- ajouter un plot interactif pour calculer les vecteurs a et b d'une fonction 1D donn\u00e9e\n",
+    "- ajouter un plot interactif de f(t) (fonction 1D) pour les vecteurs (numpy) de coefs a et b donnés\n",
+    "- ajouter un plot interactif pour calculer les vecteurs a et b d'une fonction 1D donnée\n",
     "- finir notation JL\n",
     "    - sine transform\n",
     "    - cosine transform\n",
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following notations come from the following book: *Toutes les math\u00e9matiques et les bases de l'informatique*, Horst St\u00f6cker (Dunod, 2002)"
+    "The following notations come from the following book: *Toutes les mathématiques et les bases de l'informatique*, Horst Stöcker (Dunod, 2002)"
    ]
   },
   {
