Fix the ASCII encoding issue with the clean script.

--- a/signal_processing_wavelet_transform_fr.ipynb
+++ b/signal_processing_wavelet_transform_fr.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "TODO:\n",
-    "- ajouter notation simplifi\u00e9e\n",
+    "- ajouter notation simplifiée\n",
     "    - wavelet-transform-slides\n",
     "    - slides de Bologne\n",
     "- ajouter notation JL"
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## \"\u00c0 trous\" Wavelet Transform"
+    "## \"À trous\" Wavelet Transform"
    ]
   },
   {
