--- a/maths_mandelbrot_set_fr.ipynb
+++ b/maths_mandelbrot_set_fr.ipynb
@@ -2,21 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "meta"
+    ]
+   },
    "source": [
     "# L'ensemble de Mandelbrot"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ce notebook peut également être consulté sur [nbviewer.jupyter.org](http://nbviewer.jupyter.org/url/download.tuxfamily.org/jdhp/notebook/notebook/mandelbrot.ipynb)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
    "source": [
     "**TODO**\n",
     "* dans la definition, ajouter le developpement sur une dizaine d'itérations de 2 ou 3 points comme exemple illustratif du calcul (ecrire z_i ou |z_i| ou les 2 ?)\n",
@@ -53,6 +54,70 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "tags": [
+     "hide_code"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "\n",
+    "import matplotlib\n",
+    "matplotlib.rcParams['figure.figsize'] = (10, 10)\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.mplot3d import axes3d\n",
+    "from matplotlib import cm\n",
+    "\n",
+    "EPSILON_MAX = 2.\n",
+    "NUM_IT_MAX = 32\n",
+    "Z_INIT = complex(0, 0)\n",
+    "\n",
+    "def mandelbrot(x, y):\n",
+    "    it = 0\n",
+    "    z = Z_INIT\n",
+    "    c = complex(x, y)\n",
+    "\n",
+    "    # Remarque: abs(z) = |z| = math.sqrt(pow(z.imag,2) + pow(z.real,2))\n",
+    "    while it < NUM_IT_MAX and abs(z) <= EPSILON_MAX:\n",
+    "        z = z**2 + c\n",
+    "        it += 1\n",
+    "\n",
+    "    # Pour afficher tous les niveaux d'itération\n",
+    "    return it\n",
+    "\n",
+    "    ## Pour afficher uniquement l'ensemble défini au niveau d'itération N\n",
+    "    #if it < N:\n",
+    "    #    return 1\n",
+    "    #else:\n",
+    "    #    return 0\n",
+    "\n",
+    "REAL_RANGE = np.arange(-2.0, 1.0, 0.005).tolist()\n",
+    "IMAG_RANGE = np.arange(-1.2, 1.2, 0.005).tolist()\n",
+    "\n",
+    "# Définie un ensemble de points c et vérifie leur appartenance à l'ensemble de Mandelbrot\n",
+    "xgrid, ygrid = np.meshgrid(REAL_RANGE, IMAG_RANGE)\n",
+    "data = np.array([mandelbrot(x, y) for y in IMAG_RANGE for x in REAL_RANGE]).reshape(len(IMAG_RANGE), len(REAL_RANGE))\n",
+    "\n",
+    "# Génère l'image\n",
+    "# (cmap alternatifs: summer, magma, gist_gray, gist_yarg, gist_heat, Blues, coolwarm, copper)\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.imshow(data, extent=[xgrid.min(), xgrid.max(), ygrid.min(), ygrid.max()], interpolation=\"bicubic\", cmap=cm.Blues)\n",
+    "\n",
+    "ax.set_axis_off()\n",
+    "\n",
+    "# Ajoute un titre à l'image et nome les axes\n",
+    "ax.set_title(\"Ensemble de Mandelbrot\")\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -84,7 +149,7 @@
     "%matplotlib inline\n",
     "\n",
     "import matplotlib\n",
-    "matplotlib.rcParams['figure.figsize'] = (8, 8)\n",
+    "matplotlib.rcParams['figure.figsize'] = (10, 10)\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -121,14 +186,7 @@
     "        z = z**2 + c\n",
     "        it += 1\n",
     "\n",
-    "    # Pour afficher tous les niveaux d'itération\n",
-    "    return it\n",
-    "\n",
-    "    ## Pour afficher uniquement l'ensemble défini au niveau d'itération N\n",
-    "    #if it < N:\n",
-    "    #    return 1\n",
-    "    #else:\n",
-    "    #    return 0"
+    "    return it"
    ]
   },
   {
@@ -142,7 +200,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -154,7 +212,6 @@
     "data = np.array([mandelbrot(x, y) for y in IMAG_RANGE for x in REAL_RANGE]).reshape(len(IMAG_RANGE), len(REAL_RANGE))\n",
     "\n",
     "# Génère l'image\n",
-    "# (cmap alternatifs: summer, magma, gist_gray, gist_yarg, gist_heat, Blues, coolwarm, copper)\n",
     "fig, ax = plt.subplots()\n",
     "ax.imshow(data, extent=[xgrid.min(), xgrid.max(), ygrid.min(), ygrid.max()], interpolation=\"bicubic\", cmap=cm.Blues)\n",
     "\n",
@@ -177,7 +234,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -205,6 +262,7 @@
  ],
  "metadata": {
   "anaconda-cloud": {},
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
@@ -220,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
