Update two notebooks.

--- a/maths_mandelbrot_set_en.ipynb
+++ b/maths_mandelbrot_set_en.ipynb
@@ -2,16 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "meta"
+    ]
+   },
    "source": [
     "# Mandelbrot set"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "tags": [
+     "hide"
+    ]
+   },
+   "outputs": [],
    "source": [
-    "This notebook is also available on [nbviewer.jupyter.org](http://nbviewer.jupyter.org/url/download.tuxfamily.org/jdhp/notebook/notebook/mandelbrot_set_en.ipynb)."
+    "%matplotlib inline\n",
+    "\n",
+    "import matplotlib\n",
+    "matplotlib.rcParams['figure.figsize'] = (10, 10)"
    ]
   },
   {
@@ -43,6 +57,65 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "tags": [
+     "hide_code"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.mplot3d import axes3d\n",
+    "from matplotlib import cm\n",
+    "\n",
+    "EPSILON_MAX = 2.\n",
+    "NUM_IT_MAX = 32\n",
+    "Z_INIT = complex(0, 0)\n",
+    "\n",
+    "def mandelbrot(x, y):\n",
+    "    it = 0\n",
+    "    z = Z_INIT\n",
+    "    c = complex(x, y)\n",
+    "\n",
+    "    # Rem: abs(z) = |z| = math.sqrt(pow(z.imag,2) + pow(z.real,2))\n",
+    "    while it < NUM_IT_MAX and abs(z) <= EPSILON_MAX:\n",
+    "        z = z**2 + c\n",
+    "        it += 1\n",
+    "\n",
+    "    # To print all levels\n",
+    "    return it\n",
+    "\n",
+    "    ## To print only the level #N\n",
+    "    #if it < N:\n",
+    "    #    return 1\n",
+    "    #else:\n",
+    "    #    return 0\n",
+    "\n",
+    "REAL_RANGE = np.arange(-2.0, 1.0, 0.005).tolist()\n",
+    "IMAG_RANGE = np.arange(-1.2, 1.2, 0.005).tolist()\n",
+    "\n",
+    "# Compute datas #############\n",
+    "xgrid, ygrid = np.meshgrid(REAL_RANGE, IMAG_RANGE)\n",
+    "data = np.array([mandelbrot(x, y) for y in IMAG_RANGE for x in REAL_RANGE]).reshape(len(IMAG_RANGE), len(REAL_RANGE))\n",
+    "\n",
+    "# Plot data #################\n",
+    "# (nice color maps: summer, magma, gist_gray, gist_yarg, gist_heat, Blues, coolwarm, copper)\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.imshow(data, extent=[xgrid.min(), xgrid.max(), ygrid.min(), ygrid.max()], interpolation=\"bicubic\", cmap=cm.Blues)\n",
+    "\n",
+    "ax.set_axis_off()\n",
+    "\n",
+    "# Set title and labels\n",
+    "plt.title(\"Mandelbrot set\")\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -71,11 +144,6 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "\n",
-    "import matplotlib\n",
-    "matplotlib.rcParams['figure.figsize'] = (8, 8)\n",
-    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import axes3d\n",
@@ -111,14 +179,7 @@
     "        z = z**2 + c\n",
     "        it += 1\n",
     "\n",
-    "    # To print all levels\n",
-    "    return it\n",
-    "\n",
-    "    ## To print only the level #N\n",
-    "    #if it < N:\n",
-    "    #    return 1\n",
-    "    #else:\n",
-    "    #    return 0"
+    "    return it"
    ]
   },
   {
@@ -131,9 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "REAL_RANGE = np.arange(-2.0, 1.0, 0.005).tolist()\n",
@@ -144,7 +203,6 @@
     "data = np.array([mandelbrot(x, y) for y in IMAG_RANGE for x in REAL_RANGE]).reshape(len(IMAG_RANGE), len(REAL_RANGE))\n",
     "\n",
     "# Plot data #################\n",
-    "# (nice color maps: summer, magma, gist_gray, gist_yarg, gist_heat, Blues, coolwarm, copper)\n",
     "fig, ax = plt.subplots()\n",
     "ax.imshow(data, extent=[xgrid.min(), xgrid.max(), ygrid.min(), ygrid.max()], interpolation=\"bicubic\", cmap=cm.Blues)\n",
     "\n",
@@ -166,9 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "REAL_RANGE = np.arange(-2.0, 1.0, 0.05).tolist()\n",
@@ -195,6 +251,7 @@
  ],
  "metadata": {
   "anaconda-cloud": {},
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
@@ -210,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
