--- a/maths_mandelbrot_set_fr.ipynb
+++ b/maths_mandelbrot_set_fr.ipynb
@@ -27,6 +27,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "tags": [
+     "hide"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "\n",
+    "import matplotlib\n",
+    "matplotlib.rcParams['figure.figsize'] = (10, 10)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -64,11 +81,6 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "\n",
-    "import matplotlib\n",
-    "matplotlib.rcParams['figure.figsize'] = (10, 10)\n",
-    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import axes3d\n",
@@ -146,11 +158,6 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "\n",
-    "import matplotlib\n",
-    "matplotlib.rcParams['figure.figsize'] = (10, 10)\n",
-    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import axes3d\n",
